center elements on small devices fixed

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -89,8 +89,8 @@
     }
 
     .container {
-        padding      : 0px 3%;
-        margin       : 0px 3%;
+        padding      : 0px 2.5%;
+        margin       : 0px 5%;
         max-width    : 90%;
         /* overflow-x: hidden;
         overflow-y   : visible; */
